Added scratchpad and emoji rofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -246,6 +246,9 @@ windowrule = match:initial_title ^Zen Browser$, tile on
 windowrule = match:class ^obsidian$, tile on
 windowrule = match:class ^discord$, tile on
 
+# Scratchpad
+windowrule = match:initial_title ^Scratchpad$, float on, size 70% 60%, center on, workspace special:notes
+
 # The Five Persistent Workspaces
 workspace = 1, persistent:true
 workspace = 2, persistent:true
@@ -254,5 +257,4 @@ workspace = 4, persistent:true
 workspace = 5, persistent:true
 
 # Starup
-# https://wiki.hypr.land/Configuring/Dispatchers/#executing-with-rules
 exec-once = [workspace 1 silent; tile] alacritty
