--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -26,6 +26,9 @@ bind = $hyprMod, DOWN, movetoworkspacesilent, special:shadow
 bind = $subMod, B, exec, ~/.config/hypr/scripts/randwp.sh
 bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 4200&'   # 4200 even in waybar
 
+# bind = $subMod, N, togglespecialworkspace, scratchpad
+bind = $subMod, N, exec, alacritty -T Scratchpad -e nvim ~/Documents/temp-scratchpad.md
+
 bind = $subMod      , S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode output --mode active
 bind = $subMod+SHIFT, S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode region
 bind = $subMod+CTRL , S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode window --mode active
@@ -37,6 +40,7 @@ bind = ALT, F1, exec, pkill waybar || waybar&
 # bind = ALT, F3,
 bind = ALT, F4, killactive,
 bind = ALT, SPACE, exec, pkill rofi || rofi -modi "drun" -show drun
+bind = SUPER, period, exec, pkill rofi || rofi -modi "emoji" -show emoji
 bind = ALT, TAB, cyclenext
 
 # SUB + ARROW KEYS
