--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -3,6 +3,10 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 $subMod = SUPER
 $hyprMod = CTRL+ALT
 
+$scripts = ~/.config/hypr/scripts
+$scratchpad = ~/Documents/temp-scratchpad.md
+$screenshots = ~/Pictures/Screenshots
+
 
 # My rules for setting new keybinds
 # 1. Keybinds modes:
@@ -12,26 +16,26 @@ $hyprMod = CTRL+ALT
 # 3. 
 
 
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive,
-# bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, F, fullscreen, 0
 
-bind = $hyprMod, UP, exec, ~/.config/hypr/scripts/unminimize.sh
+# Minimizing windows
+bind = $hyprMod, UP, exec, $scripts/unminimize.sh
 bind = $hyprMod, DOWN, movetoworkspacesilent, special:shadow
-# bind = $subMod, N, exec, ~/.config/hypr/unminimize.sh
-# bind = $subMod, M, movetoworkspacesilent, special:shadow
-bind = $subMod, B, exec, ~/.config/hypr/scripts/randwp.sh
-bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 4200&'   # 4200 even in waybar
+
+bind = $subMod, B, exec, $scripts/randwp.sh
+bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 3400&'   # 4200 even in waybar
 
 # bind = $subMod, N, togglespecialworkspace, scratchpad
-bind = $subMod, N, exec, alacritty -T Scratchpad -e nvim ~/Documents/temp-scratchpad.md
+bind = $subMod, N, exec, alacritty -T Scratchpad -e nvim $scratchpad
 
-bind = $subMod      , S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode output --mode active
-bind = $subMod+SHIFT, S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode region
-bind = $subMod+CTRL , S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode window --mode active
+bind = $subMod      , S, exec, hyprshot -o $screenshots -z --mode output --mode active
+bind = $subMod+SHIFT, S, exec, hyprshot -o $screenshots -z --mode region
+bind = $subMod+CTRL , S, exec, hyprshot -o $screenshots -z --mode window --mode active
 
 
 
@@ -108,12 +112,12 @@ bindm = $subMod, mouse:272, movewindow
 bindm = $subMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindle = ,XF86AudioMute, exec, ~/.config/hypr/scripts/control.sh V_MUTE
-bindle = ,XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/control.sh V_DOWN
-bindle = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/control.sh V_UP
+bindle = ,XF86AudioMute, exec, $scripts/control.sh V_MUTE
+bindle = ,XF86AudioLowerVolume, exec, $scripts/control.sh V_DOWN
+bindle = ,XF86AudioRaiseVolume, exec, $scripts/control.sh V_UP
 
-bindle = ,XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/control.sh B_DOWN
-bindle = ,XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/control.sh B_UP
+bindle = ,XF86MonBrightnessDown, exec, $scripts/control.sh B_DOWN
+bindle = ,XF86MonBrightnessUp, exec, $scripts/control.sh B_UP
 bindl  = ,XF86TouchpadToggle, exec, notify-send "Please Fix F6"
 
 unbind = ,XF86Launch1
