Added rofi calc and wifi on hyprland keybinds

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -6,6 +6,7 @@ $hyprMod = CTRL+ALT
 $scripts = ~/.config/hypr/scripts
 $scratchpad = ~/Documents/temp-scratchpad.md
 $screenshots = ~/Pictures/Screenshots
+$roficalc = rofi -show calc -modi calc -no-show-match -no-sort -terse | wl-copy
 
 
 # My rules for setting new keybinds
@@ -16,36 +17,47 @@ $screenshots = ~/Pictures/Screenshots
 # 3. 
 
 
-bind = $mainMod, Q, exec, kitty
+
+# Window Control
 bind = $mainMod, C, killactive,
-bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, F, fullscreen, 0
+bind = ALT, TAB, cyclenext
 
 # Minimizing windows
 bind = $hyprMod, UP, exec, $scripts/unminimize.sh
 bind = $hyprMod, DOWN, movetoworkspacesilent, special:shadow
 
+# Applications
+bind = $mainMod, T, exec, kitty
+bind = $mainMod, E, exec, nautilus
+
+# Custom Scripts
 bind = $subMod, B, exec, $scripts/randwp.sh
 bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 3400&'   # 4200 even in waybar
-
-# bind = $subMod, N, togglespecialworkspace, scratchpad
 bind = $subMod, N, exec, alacritty -T Scratchpad -e nvim $scratchpad
 
+# Rofi Keybinds
+bind = ALT, SPACE,    exec, pkill rofi || rofi -modi "drun" -show drun
+bind = SUPER, period, exec, pkill rofi || rofi -modi "emoji" -show emoji
+bind = $subMod, W,    exec, ~/.config/rofi/rofi-wifi-menu.sh
+bind = $subMod, Q,    exec, pkill rofi || $roficalc
+
+# Screenshots
 bind = $subMod      , S, exec, hyprshot -o $screenshots -z --mode output --mode active
 bind = $subMod+SHIFT, S, exec, hyprshot -o $screenshots -z --mode region
 bind = $subMod+CTRL , S, exec, hyprshot -o $screenshots -z --mode window --mode active
 
 
 
+# ALT + Function Key
 bind = ALT, F1, exec, pkill waybar || waybar&
 # bind = ALT, F2,
 # bind = ALT, F3,
 bind = ALT, F4, killactive,
-bind = ALT, SPACE, exec, pkill rofi || rofi -modi "drun" -show drun
-bind = SUPER, period, exec, pkill rofi || rofi -modi "emoji" -show emoji
-bind = ALT, TAB, cyclenext
+
+
 
 # SUB + ARROW KEYS
 bind = $subMod, LEFT,  movefocus, l
