--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,11 @@
-# External Sources
+### Prerequisite:
+# Install these: 
+# hyprshot, waybar, dunst, swww
+# rofi, rofi-calc, rofi-emoji, 
+# playerctl, libnotify, wpctl
+
+
+### External Sources
 # dynamic-borders.sh was copied from:
 # https://github.com/devadathanmb/hyprland-smart-borders
 
@@ -12,23 +19,17 @@
 monitor=,preferred,auto,1.0
 
 
-###################
-### MY PROGRAMS ###
-###################
+################################
+### MY PROGRAMS &  AUTOSTART ###
+################################
 
 $browser = flatpak run app.zen_browser.zen
-
-
-#################
-### AUTOSTART ###
-#################
 
 exec-once = dex -a -s ~/.config/autostart/
 exec-once = waybar
 exec-once = dunst
 exec-once = swww-daemon
 exec-once = ~/.config/hypr/scripts/dynamic-borders.sh
-# exec-once = ~/.pyenv/bin/pypr --debug /tmp/pypr.log
 
 
 #############################
@@ -177,8 +178,9 @@ master {
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
 	on_focus_under_fullscreen = 1
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    middle_click_paste = false
+    force_default_wallpaper = 0    # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true    # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
