--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 # Install these: 
 # hyprshot, waybar, dunst, swww
 # rofi, rofi-calc, rofi-emoji, 
-# playerctl, libnotify, wpctl
+# playerctl, libnotify, wpctl, wl-clipboard
 
 
 ### External Sources
@@ -246,8 +246,9 @@ windowrule = match:initial_title ^Zen Browser$, tile on
 windowrule = match:class ^obsidian$, tile on
 windowrule = match:class ^discord$, tile on
 
-# Scratchpad
+# Random Rules
 windowrule = match:initial_title ^Scratchpad$, float on, size 70% 60%, center on, workspace special:notes
+windowrule = match:class ^kitty$, float on, size 80% 80%, center on
 
 # The Five Persistent Workspaces
 workspace = 1, persistent:true
