--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -43,6 +43,7 @@ bind = ALT, SPACE,    exec, pkill rofi || rofi -modi "drun" -show drun
 bind = SUPER, period, exec, pkill rofi || rofi -modi "emoji" -show emoji
 bind = $subMod, W,    exec, ~/.config/rofi/rofi-wifi-menu.sh
 bind = $subMod, Q,    exec, pkill rofi || $roficalc
+bind = $subMod, R,    exec, blueman-manager    # Not rofi here
 
 # Screenshots
 bind = $subMod      , S, exec, hyprshot -o $screenshots -z --mode output --mode active
