--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -44,6 +44,7 @@ bind = SUPER, period, exec, pkill rofi || rofi -modi "emoji" -show emoji
 bind = $subMod, W,    exec, ~/.config/rofi/rofi-wifi-menu.sh
 bind = $subMod, Q,    exec, pkill rofi || $roficalc
 bind = $subMod, R,    exec, blueman-manager    # Not rofi here
+bind = $hyprMod, P,   exec, ~/.config/rofi/rofi-powermenu.sh
 
 # Screenshots
 bind = $subMod      , S, exec, hyprshot -o $screenshots -z --mode output --mode active
