Added rofi Clipboard

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 ### Prerequisite:
 # Install these: 
-# hyprshot, waybar, dunst, swww
+# hyprlock, hyprshot, waybar, dunst, swww
 # rofi, rofi-calc, rofi-emoji, 
 # playerctl, libnotify, wpctl, wl-clipboard
 
