--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -5,8 +5,9 @@ $hyprMod = CTRL+ALT
 
 $scripts = ~/.config/hypr/scripts
 $scratchpad = ~/Documents/temp-scratchpad.md
-$screenshots = ~/Pictures/Screenshots
+$ss_output = ~/Pictures/Screenshots
 $roficalc = rofi -show calc -modi calc -no-show-match -no-sort -terse | wl-copy
+$rofi_scripts = ~/.config/rofi
 
 
 # My rules for setting new keybinds
@@ -41,15 +42,16 @@ bind = $subMod, N, exec, alacritty -T Scratchpad -e nvim $scratchpad
 # Rofi Keybinds
 bind = ALT, SPACE,    exec, pkill rofi || rofi -modi "drun" -show drun
 bind = SUPER, period, exec, pkill rofi || rofi -modi "emoji" -show emoji
-bind = $subMod, W,    exec, ~/.config/rofi/rofi-wifi-menu.sh
+bind = $subMod, W,    exec, $rofi_scripts/rofi-wifi-menu.sh
 bind = $subMod, Q,    exec, pkill rofi || $roficalc
 bind = $subMod, R,    exec, blueman-manager    # Not rofi here
-bind = $hyprMod, P,   exec, ~/.config/rofi/rofi-powermenu.sh
+bind = $subMod, H,    exec, $rofi_scripts/rofi-clipboard.sh
+bind = $hyprMod, P,   exec, $rofi_scripts/rofi-powermenu.sh
 
 # Screenshots
-bind = $subMod      , S, exec, hyprshot -o $screenshots -z --mode output --mode active
-bind = $subMod+SHIFT, S, exec, hyprshot -o $screenshots -z --mode region
-bind = $subMod+CTRL , S, exec, hyprshot -o $screenshots -z --mode window --mode active
+bind = $subMod      , S, exec, hyprshot -o $ss_output -z --mode output --mode active
+bind = $subMod+SHIFT, S, exec, hyprshot -o $ss_output -z --mode region
+bind = $subMod+CTRL , S, exec, hyprshot -o $ss_output -z --mode window --mode active
 
 
 
