--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,11 @@
 ### Prerequisite:
 # Install these: 
-# hyprlock, hyprshot, waybar, dunst, swww
+# hyprlock, hyprshot, hyprpicker
+# waybar, dunst, swww
 # rofi, rofi-calc, rofi-emoji, 
-# playerctl, libnotify, wpctl, wl-clipboard
+# brightnessctl, playerctl, libnotify, wpctl, wl-clipboard
+# mpd, mpc, ttf-ms-fonts
+# xdg-desktop-portal-wlr, pipewire, wireplumber, qt5-wayland, qt6-wayland
 
 
 ### External Sources
