--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -38,6 +38,7 @@ bind = $mainMod, E, exec, nautilus
 bind = $subMod, B, exec, $scripts/randwp.sh
 bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 3400&'   # 4200 even in waybar
 bind = $subMod, N, exec, alacritty -T Scratchpad -e nvim $scratchpad
+bind = $subMod, grave, exec, alacritty -T Scratchpad -e nvim $scratchpad
 
 # Rofi Keybinds
 bind = ALT, SPACE,    exec, pkill rofi || rofi -modi "drun" -show drun
